--- a/20230210_sesac_final/transport_to_aws.ipynb
+++ b/20230210_sesac_final/transport_to_aws.ipynb
@@ -178,9 +178,7 @@
     "# 계정 설정\n",
     "\n",
     "aws_access_key_id = pd.read_csv('/Users/jongya/Desktop/aws_key.csv').iloc[0].loc['aws_access_key_id']\n",
-    "aws_secret_access_key = pd.read_csv('/Users/jongya/Desktop/aws_key.csv').iloc[0].loc['aws_secret_access_key']\n",
-    "\n",
-    "print(aws_access_key_id, aws_secret_access_key)"
+    "aws_secret_access_key = pd.read_csv('/Users/jongya/Desktop/aws_key.csv').iloc[0].loc['aws_secret_access_key']"
    ]
   },
   {
@@ -437,13 +435,6 @@
     "\n",
     "s3_client.delete_object(Bucket = bucket_name, Key = 'test2.sql')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {},
