--- a/20230210_sesac_final/transport_to_aws.ipynb
+++ b/20230210_sesac_final/transport_to_aws.ipynb
@@ -53,9 +53,9 @@
     "\n",
     "host = \"team06-antifragile-db.cxuncqkdvk3h.us-east-1.rds.amazonaws.com\"\n",
     "port = 3306\n",
-    "username = \"admin\"\n",
+    "username = \"\"\n",
     "database = \"antifragile\"\n",
-    "password = \"antifragile1234\""
+    "password = \"\""
    ]
   },
   {
@@ -160,8 +160,8 @@
     "# 계정 설정 (직접 세팅)\n",
     "# CLI 로 미리 세팅을 해놓기를 바랍니다. 불가능할 경우 아래에 키를 넣어주세요. (하지만 추천하지 않음)\n",
     "\n",
-    "# aws_access_key_id = pd.read_csv('키파일.csv').iloc[0].loc['Access key ID']\n",
-    "# aws_secret_access_key = pd.read_csv('키파일.csv').iloc[0].loc['Secret access key']\n"
+    "aws_access_key_id = pd.read_csv('키파일.csv').iloc[0].loc['Access key ID']\n",
+    "aws_secret_access_key = pd.read_csv('키파일.csv').iloc[0].loc['Secret access key']\n"
    ]
   },
   {
@@ -219,17 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "s3.ObjectSummary(bucket_name='team06-antifragile-s3', key='앞으로의 프로젝트.xlsx')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 버킷에 업로드되어있는 파일 확인\n",
     "\n",
@@ -261,7 +253,7 @@
     "# s3.meta.client.download_file('bucket_name', 'file_key', 'local/file/path')\n",
     "# file_key = bucket/file/path\n",
     "\n",
-    "s3.meta.client.download_file(bucket_name, 'test.sql', '/Users/jongya/Desktop/test2.sql')"
+    "s3.meta.client.download_file(bucket_name, 'file_name.extension', '/file/path.extension')"
    ]
   },
   {
@@ -273,7 +265,7 @@
     "# 버킷에서 파일 삭제\n",
     "# s3.Object(bucket_name, file_key).delete()\n",
     "\n",
-    "s3.Object(bucket_name, 'test.sql').delete()"
+    "s3.Object(bucket_name, 'filename.extension').delete()"
    ]
   },
   {
@@ -368,7 +360,7 @@
     "# s3_client.upload_file('/local/file/path', 'bucket_name', 'file_key')\n",
     "# file_key = bucket/file/path\n",
     "\n",
-    "s3_client.upload_file('/Users/jongya/Desktop/antifragile.sql', bucket_name, 'test2.sql')"
+    "s3_client.upload_file('file/path.extension', bucket_name, 'file_name.extension')"
    ]
   },
   {
@@ -381,37 +373,19 @@
     "# s3_client.download_file('bucket_name', 'file_key', 'local/file/path')\n",
     "# file_key = bucket/file/path\n",
     "\n",
-    "s3_client.download_file(bucket_name, 'test.sql', '/Users/jongya/Desktop/test3.sql')"
+    "s3_client.download_file(bucket_name, 'file_name.extension', 'file/path.extension')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ResponseMetadata': {'RequestId': 'KE84D250HSDX5N26',\n",
-       "  'HostId': 'oj0o5QEzDo5LU2dVILH3ASAu0GoFutMtIHa0DziP2aRPClgv6EOjzlsKAw8wpd/eYdOQfTZlpn0=',\n",
-       "  'HTTPStatusCode': 204,\n",
-       "  'HTTPHeaders': {'x-amz-id-2': 'oj0o5QEzDo5LU2dVILH3ASAu0GoFutMtIHa0DziP2aRPClgv6EOjzlsKAw8wpd/eYdOQfTZlpn0=',\n",
-       "   'x-amz-request-id': 'KE84D250HSDX5N26',\n",
-       "   'date': 'Sun, 05 Mar 2023 10:55:16 GMT',\n",
-       "   'server': 'AmazonS3'},\n",
-       "  'RetryAttempts': 0}}"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 버킷에서 파일 삭제\n",
     "# s3_client.delete_object(Bucket=bucket_name, Key=object_key)\n",
     "\n",
-    "s3_client.delete_object(Bucket = bucket_name, Key = 'test2.sql')"
+    "s3_client.delete_object(Bucket = bucket_name, Key = 'file_name.extension')"
    ]
   },
   {
@@ -479,17 +453,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "앞으로의 프로젝트.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 버킷에 업로드 되어있는 파일 확인\n",
     "\n",
@@ -508,7 +474,7 @@
     "# 버킷에 파일 업로드 (방법 2)\n",
     "\n",
     "prefix = '/test/sqls/'\n",
-    "local_file = '/Users/jongya/Desktop/antifragile.sql'\n",
+    "local_file = '/Users/user/Desktop/antifragile.sql'\n",
     "\n",
     "s3_client.upload_file(local_file, bucket_name, prefix + 'test3.sql')\n",
     "s3_client.upload_file(local_file, bucket_name, prefix + 'test4.sql')\n",
