--- a/20230210_sesac_final/transport_to_aws.ipynb
+++ b/20230210_sesac_final/transport_to_aws.ipynb
@@ -51,10 +51,10 @@
    "source": [
     "# 연결 RDS 정보\n",
     "\n",
-    "host = \"team06-antifragile-db.cxuncqkdvk3h.us-east-1.rds.amazonaws.com\"\n",
+    "host = \"\"\n",
     "port = 3306\n",
     "username = \"\"\n",
-    "database = \"antifragile\"\n",
+    "database = \"\"\n",
     "password = \"\""
    ]
   },
@@ -173,8 +173,8 @@
     "# s3 정보 입력\n",
     "\n",
     "resource = 's3'\n",
-    "bucket_name = 'team06-antifragile-s3'\n",
-    "region_name = 'us-east-1'"
+    "bucket_name = ''\n",
+    "region_name = ''"
    ]
   },
   {
@@ -240,7 +240,7 @@
     "# 버킷에 파일 업로드 (방법 1)\n",
     "# s3.meta.client.upload_file('local/file/path', 'bucket_name', 'bucket/file/path')\n",
     "\n",
-    "s3.meta.client.upload_file('./antifragile.sql', bucket_name, 'test.sql')"
+    "s3.meta.client.upload_file('./file_name.extension', bucket_name, 'file_name.extension')"
    ]
   },
   {
@@ -474,7 +474,7 @@
     "# 버킷에 파일 업로드 (방법 2)\n",
     "\n",
     "prefix = '/test/sqls/'\n",
-    "local_file = '/Users/user/Desktop/antifragile.sql'\n",
+    "local_file = '/Users/user/Desktop/test.sql'\n",
     "\n",
     "s3_client.upload_file(local_file, bucket_name, prefix + 'test3.sql')\n",
     "s3_client.upload_file(local_file, bucket_name, prefix + 'test4.sql')\n",
