--- a/20230210_sesac_final/transport_to_aws.ipynb
+++ b/20230210_sesac_final/transport_to_aws.ipynb
@@ -34,39 +34,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install pymysql\n",
     "import pymysql\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 연결 RDS 정보\n",
     "\n",
-    "host = \"\"\n",
-    "port = 3306\n",
-    "username = \"\"\n",
-    "database = \"\"\n",
-    "password = \"\""
+    "rds_host = ''\n",
+    "rds_port = ''\n",
+    "rds_database = ''\n",
+    "rds_username = ''\n",
+    "rds_password = ''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# pymysql을 통한 로컬 - AWS RDS 연결\n",
     "\n",
-    "conn = pymysql.connect(host = host, user = username, port = port, database = database, password = password)\n",
+    "conn = pymysql.connect(host = rds_host, user = rds_username, port = rds_port, database = rds_database, password = rds_password)\n",
     "cursor = conn.cursor()"
    ]
   },
@@ -80,7 +80,7 @@
     "\n",
     "## 명령문 작성\n",
     "sql = '''\n",
-    "show tables;\n",
+    "select * from test;\n",
     "'''\n",
     "\n",
     "## 명령문 실행\n",
@@ -94,7 +94,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 명령문 실행\n",
+    "\n",
+    "## 명령문 작성\n",
+    "sql = '''\n",
+    "delete from test;\n",
+    "'''\n",
+    "\n",
+    "## 명령문 실행\n",
+    "cursor.execute(sql)\n",
+    "\n",
+    "## 실행 결과 출력\n",
+    "response = cursor.fetchall()\n",
+    "for data in response:\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 명령문 실행\n",
+    "\n",
+    "## 명령문 작성\n",
+    "sql = '''\n",
+    "commit;\n",
+    "'''\n",
+    "\n",
+    "## 명령문 실행\n",
+    "cursor.execute(sql)\n",
+    "\n",
+    "## 실행 결과 출력\n",
+    "response = cursor.fetchall()\n",
+    "for data in response:\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,11 +185,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install boto3\n",
     "import boto3\n",
     "import os\n",
     "import pandas as pd"
@@ -160,19 +203,19 @@
     "# 계정 설정 (직접 세팅)\n",
     "# CLI 로 미리 세팅을 해놓기를 바랍니다. 불가능할 경우 아래에 키를 넣어주세요. (하지만 추천하지 않음)\n",
     "\n",
-    "aws_access_key_id = pd.read_csv('키파일.csv').iloc[0].loc['Access key ID']\n",
-    "aws_secret_access_key = pd.read_csv('키파일.csv').iloc[0].loc['Secret access key']\n"
+    "# aws_access_key_id = pd.read_csv('키파일.csv').iloc[0].loc['Access key ID']\n",
+    "# aws_secret_access_key = pd.read_csv('키파일.csv').iloc[0].loc['Secret access key']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# s3 정보 입력\n",
     "\n",
-    "resource = 's3'\n",
+    "resource = ''\n",
     "bucket_name = ''\n",
     "region_name = ''"
    ]
@@ -202,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,6 +324,18 @@
     "for i in buckets.objects.all():\n",
     "    if 'test' in i.key:\n",
     "        s3.Object(bucket_name, i.key).delete()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 연결 종료\n",
+    "\n",
+    "s3.meta.client.close()\n",
+    "buckets.meta.client.close()"
    ]
   },
   {
@@ -496,6 +551,187 @@
     "    if prefix in i.key:\n",
     "        s3_client.delete_object(Bucket = bucket_name, Key = i.key)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AWS Access key 및 RDS ID, PW 숨기기"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AWS를 다룰 때 중요한 것 중 하나는 바로 보안이다.  \n",
+    "참고로 나의 경우 EC2 key 보안 관리를 잘 못 했다가.. 큰 손해가 발생했다.  \n",
+    "\n",
+    "AWS의 Access key를 노출했다가,  \n",
+    "(추측컨데) 외부인이 해당 키를 이용해 여러 EC2 인스턴스를 생성, 거의 100% 풀가동을 하여  \n",
+    "많은 비용이 발생했다.  \n",
+    "앞으로 개발자로 살아간다면, 평생 잊지 말아야 할 큰 말썽이다.  \n",
+    "\n",
+    "아래에서는 이러한 불상사가 일어나지 않게 AWS 접근 키들을 숨기는 방법을 서술한다.  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AWS 접근 키들을 숨기는 방식은 여러 가지가 있겠지만,  \n",
+    "가장 널리, 그리고 안전한 방법으로 쓰이는 것은 바로 \"시스템 환경 변수\"를 사용하는 것이다.  \n",
+    "\n",
+    "시스템 환경 변수는 해당 로컬에만 값이 저장되고, 언제 어디서든 불러올 수 있다는 게 장점이다.  \n",
+    "더불어, 환경변수명을 모를 경우 어떤 정보를 어떻게 불러와야하는지 알 수 없으며,  \n",
+    "환경변수명을 알더라도 이를 이용하기 위한 암호 설정, 사용자별 권한 제어 등을 통해 보안을 강화하면 비교적 안전하게 보호할 수 있다.  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "환경 변수의 보안을 보장하기 위해 몇 가지 모범 사례를 따르는 한 환경 변수를 사용하여 AWS RDS 인스턴스 자격 증명을 저장하는 것이 중요한 정보를 보호하는 안전한 방법이 될 수 있습니다.\n",
+    "\n",
+    "다음은 따라야 할 몇 가지 모범 사례입니다.\n",
+    "\n",
+    "안전한 환경 변수 설정: 인증되지 않은 사용자나 프로세스가 액세스할 수 없도록 환경 변수를 안전하게 설정해야 합니다. 예를 들어 암호로 보호된 터미널 세션과 같은 보안 환경에서 환경 변수를 설정하거나 환경 변수를 암호화하는 dotenv와 같은 도구를 사용할 수 있습니다.\n",
+    "\n",
+    "코드에 환경 변수를 노출하지 마십시오: 실수로 코드나 출력에 환경 변수를 노출하지 않도록 하십시오. 예를 들어 환경 변수의 값을 인쇄하지 말고 로그 파일이나 오류 메시지에 포함하지 마십시오.\n",
+    "\n",
+    "환경 변수에 대한 액세스 제한: 인증된 사용자 및 프로세스만 환경 변수에 액세스할 수 있는지 확인하십시오. 예를 들어 파일 권한을 설정하거나 암호에 대한 액세스를 관리하는 Key Vault와 같은 도구를 사용하여 환경 변수에 대한 액세스를 제한할 수 있습니다.\n",
+    "\n",
+    "자격 증명을 정기적으로 교체: 자격 증명이 손상될 위험을 최소화하려면 자격 증명을 정기적으로 교체해야 합니다. 예를 들어 AWS 액세스 키와 보안 액세스 키를 90일마다 교체하고 그에 따라 환경 변수를 업데이트할 수 있습니다.\n",
+    "\n",
+    "이러한 모범 사례를 따르면 민감한 정보를 보호하기 위해 환경 변수를 안전하게 사용할 수 있습니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "외부 파일(예: Excel 파일 또는 .env 파일)에서 AWS RDS 인스턴스 자격 증명을 로드하면 암호를 보다 쉽게 ​​관리하고 실수로 코드에 노출되는 것을 방지할 수 있습니다. 그러나 외부 파일이 안전하게 저장되고 승인된 사용자만 액세스할 수 있는지 확인해야 합니다.\n",
+    "\n",
+    "다음은 외부 파일의 보안을 유지하는 데 도움이 되는 몇 가지 모범 사례입니다.\n",
+    "\n",
+    "파일을 안전하게 저장: 권한이 없는 사용자나 프로세스가 액세스할 수 없도록 외부 파일을 안전하게 저장해야 합니다. 예를 들어 파일을 암호화된 드라이브나 암호로 보호된 폴더에 저장할 수 있습니다.\n",
+    "\n",
+    "파일에 대한 액세스 제한: 승인된 사용자 및 프로세스만 외부 파일에 액세스할 수 있는지 확인하십시오. 예를 들어 파일 권한을 설정하거나 암호에 대한 액세스를 관리하는 Key Vault와 같은 도구를 사용하여 파일에 대한 액세스를 제한할 수 있습니다.\n",
+    "\n",
+    "파일 암호화: 비밀을 더욱 보호하기 위해 GPG와 같은 도구를 사용하여 외부 파일을 암호화할 수 있습니다. 이렇게 하면 파일이 도난당하거나 손상된 경우에도 비밀에 대한 무단 액세스를 방지할 수 있습니다.\n",
+    "\n",
+    "자격 증명을 정기적으로 교체: 자격 증명이 손상될 위험을 최소화하려면 자격 증명을 정기적으로 교체해야 합니다. 예를 들어 AWS 액세스 키와 보안 액세스 키를 90일마다 교체하고 이에 따라 외부 파일을 업데이트할 수 있습니다.\n",
+    "\n",
+    "이러한 모범 사례를 따르면 중요한 정보를 보호하기 위해 외부 파일을 안전하게 사용할 수 있습니다. 그러나 2단계 인증 사용, 의심스러운 활동에 대한 AWS RDS 인스턴스 모니터링, 소프트웨어 최신 상태 유지와 같은 다른 보안 조치도 고려하여 공격으로부터 시스템을 보호해야 합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting python-dotenv\n",
+      "  Downloading python_dotenv-1.0.0-py3-none-any.whl (19 kB)\n",
+      "Installing collected packages: python-dotenv\n",
+      "Successfully installed python-dotenv-1.0.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install python-dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 먼저 환경변수 파일을 만들어준 뒤, key=value 내용을 적는다.\n",
+    "# 환경변수 파일은 본 프로젝트의 루트 디렉토리에 저장된다.\n",
+    "\n",
+    "path = os.getcwd() + '/some.env'\n",
+    "with open(path, 'a') as f:\n",
+    "    f.write('SOME1=첫번째value입니다.')\n",
+    "    f.write('\\nSOME2=두번째value입니다.')\n",
+    "    f.write('\\nSOME3=세번째value입니다.')\n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SOME123\n",
+      "SOME223\n",
+      "SOME323\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 환경변수 불러오기\n",
+    "\n",
+    "load_dotenv(dotenv_path='./some.env')\n",
+    "\n",
+    "print(os.environ['SOME1'])\n",
+    "print(os.environ['SOME2'])\n",
+    "print(os.environ['SOME3'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SOME123\n",
+      "SOME223\n",
+      "SOME323\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 환경변수 불러오기 : 보통 불러오는 환경변수 명을 노출하지 않는 게 현명하다.\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "print(os.environ['SOME1'])\n",
+    "print(os.environ['SOME2'])\n",
+    "print(os.environ['SOME3'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
