--- a/20230210_sesac_final/transport_to_aws.ipynb
+++ b/20230210_sesac_final/transport_to_aws.ipynb
@@ -40,22 +40,57 @@
    "source": [
     "import pymysql\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import dotenv"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/jongya/Desktop/Workspace/lab/20230210_sesac_final\n"
+     ]
+    }
+   ],
    "source": [
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'RDS_HOST'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m dotenv\u001b[39m.\u001b[39mload_dotenv(env_file)\n\u001b[1;32m      5\u001b[0m \u001b[39m# 연결 RDS 정보\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m rds_host \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39;49menviron[\u001b[39m\"\u001b[39;49m\u001b[39mRDS_HOST\u001b[39;49m\u001b[39m\"\u001b[39;49m]\n\u001b[1;32m      8\u001b[0m rds_port \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(os\u001b[39m.\u001b[39menviron[\u001b[39m\"\u001b[39m\u001b[39mRDS_POST\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m      9\u001b[0m rds_database \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39menviron[\u001b[39m\"\u001b[39m\u001b[39mRDS_DATABASE\u001b[39m\u001b[39m\"\u001b[39m]\n",
+      "File \u001b[0;32m~/miniforge3/envs/jh/lib/python3.8/os.py:675\u001b[0m, in \u001b[0;36m_Environ.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    672\u001b[0m     value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_data[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mencodekey(key)]\n\u001b[1;32m    673\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n\u001b[1;32m    674\u001b[0m     \u001b[39m# raise KeyError with the original key value\u001b[39;00m\n\u001b[0;32m--> 675\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[1;32m    676\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdecodevalue(value)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'RDS_HOST'"
+     ]
+    }
+   ],
+   "source": [
+    "path = './yolov5'\n",
+    "env_file = [x for x in os.listdir(path) if x.endswith(\".env\")][0]\n",
+    "dotenv.load_dotenv(env_file)\n",
+    "\n",
     "# 연결 RDS 정보\n",
     "\n",
-    "rds_host = \n",
-    "rds_port = 3306\n",
-    "rds_database = \n",
-    "rds_username = \n",
-    "rds_password = "
+    "rds_host = os.environ[\"RDS_HOST\"]\n",
+    "rds_port = int(os.environ[\"RDS_POST\"])\n",
+    "rds_database = os.environ[\"RDS_DATABASE\"]\n",
+    "rds_username = os.environ[\"RDS_USERNAME\"]\n",
+    "rds_password = os.environ[\"RDS_PASSWORD\"]"
    ]
   },
   {
@@ -1210,7 +1245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4,
   "vscode": {
