--- a/20230210_sesac_final/transport_to_aws.ipynb
+++ b/20230210_sesac_final/transport_to_aws.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,28 @@
     "import pandas as pd\n",
     "import os\n",
     "import dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con = pymysql.connect(host = rds_host,\n",
+    "                      port = rds_port, \n",
+    "                      user = rds_username,\n",
+    "                      database = rds_database,\n",
+    "                      password = rds_password)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur = con.cursor()"
    ]
   },
   {
