--- a/20230210_sesac_final/transport_to_aws.ipynb
+++ b/20230210_sesac_final/transport_to_aws.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,77 +46,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "con = pymysql.connect(host = rds_host,\n",
-    "                      port = rds_port, \n",
-    "                      user = rds_username,\n",
-    "                      database = rds_database,\n",
-    "                      password = rds_password)"
+    "# 종혁 : RDS, S3 관련 정보\n",
+    "dotenv.load_dotenv([x for x in os.listdir(os.getcwd()) if x.endswith('.env')][0])\n",
+    "rds_host = os.environ['RDS_HOST']\n",
+    "rds_port = int(os.environ['RDS_PORT'])\n",
+    "rds_database = os.environ['RDS_DATABASE']\n",
+    "rds_username = os.environ['RDS_USERNAME']\n",
+    "rds_password = os.environ['RDS_PASSWORD']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cur = con.cursor()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cur_path = os.getcwd()\n",
-    "path = '/yolov5/'\n",
-    "env_file = [x for x in os.listdir(cur_path + path) if x.endswith(\".env\")]\n",
-    "dotenv.load_dotenv(cur_path + path + env_file[0])\n",
-    "\n",
-    "# 연결 RDS 정보\n",
-    "\n",
-    "rds_host = os.environ[\"RDS_HOST\"]\n",
-    "rds_port = int(os.environ[\"RDS_PORT\"])\n",
-    "rds_database = os.environ[\"RDS_DATABASE\"]\n",
-    "rds_username = os.environ[\"RDS_USERNAME\"]\n",
-    "rds_password = os.environ[\"RDS_PASSWORD\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# pymysql을 통한 로컬 - AWS RDS 연결\n",
     "\n",
-    "conn = pymysql.connect(host = rds_host, user = rds_username, port = rds_port, database = rds_database, password = rds_password)\n",
+    "conn = pymysql.connect(host = rds_host,\n",
+    "                       user = rds_username,\n",
+    "                       port = rds_port,\n",
+    "                       database = rds_database,\n",
+    "                       password = rds_password)\n",
     "cursor = conn.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('event_name', 'varchar(40)', 'YES', '', None, '')\n",
-      "('userId', 'varchar(20)', 'YES', '', None, '')\n",
-      "('detect_date', 'varchar(20)', 'YES', '', None, '')\n",
-      "('detect_time', 'varchar(20)', 'YES', '', None, '')\n",
-      "('object1_name', 'varchar(10)', 'YES', '', None, '')\n",
-      "('object1_num', 'varchar(10)', 'YES', '', None, '')\n",
-      "('object2_name', 'varchar(10)', 'YES', '', None, '')\n",
-      "('object2_num', 'varchar(10)', 'YES', '', None, '')\n",
-      "('object3_name', 'varchar(10)', 'YES', '', None, '')\n",
-      "('object3_num', 'varchar(10)', 'YES', '', None, '')\n"
+      "('antifragile',)\n",
+      "('information_schema',)\n",
+      "('innodb',)\n",
+      "('mysql',)\n",
+      "('performance_schema',)\n",
+      "('sys',)\n",
+      "('tmp',)\n"
      ]
     }
    ],
@@ -125,7 +99,7 @@
     "\n",
     "## 명령문 작성\n",
     "sql = '''\n",
-    "DESC test;\n",
+    "show databases;\n",
     "'''\n",
     "\n",
     "## 명령문 실행\n",
@@ -1024,9 +998,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Already closed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mError\u001b[0m                                     Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# sql 연결 해제\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m conn\u001b[39m.\u001b[39;49mclose()\n",
+      "File \u001b[0;32m~/miniforge3/envs/sesac_final/lib/python3.10/site-packages/pymysql/connections.py:404\u001b[0m, in \u001b[0;36mConnection.close\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    395\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    396\u001b[0m \u001b[39mSend the quit message and close the socket.\u001b[39;00m\n\u001b[1;32m    397\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    401\u001b[0m \u001b[39m:raise Error: If the connection is already closed.\u001b[39;00m\n\u001b[1;32m    402\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    403\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_closed:\n\u001b[0;32m--> 404\u001b[0m     \u001b[39mraise\u001b[39;00m err\u001b[39m.\u001b[39mError(\u001b[39m\"\u001b[39m\u001b[39mAlready closed\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    405\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_closed \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    406\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_sock \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "\u001b[0;31mError\u001b[0m: Already closed"
+     ]
+    }
+   ],
    "source": [
     "# sql 연결 해제\n",
     "\n",
@@ -1636,7 +1623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
