--- a/20230502_noise_canceling/noise_canceling_research.ipynb
+++ b/20230502_noise_canceling/noise_canceling_research.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,23 +78,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 역 주파수 만들기"
+    "## 역위상 음원 만들기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 역 주파수 만들기\n",
+    "# 역위상 음원 만들기\n",
     "\n",
     "sound_reverse = sound * (-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -111,13 +111,13 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 역 주파수 들어보기\n",
+    "# 역위상 음원 들어보기\n",
     "IPython.display.Audio(sound_reverse, rate = sampling_rate)"
    ]
   },
@@ -126,12 +126,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 원음과 역주파수 그래프로 비교"
+    "## 원음과 역위상 음원 그래프로 비교"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 어라 역수를 취했는데 음성도 동일하게 나오고, 그래프도 비슷하네..??"
+    "# 어라 -1을 곱했는데 음성도 동일하게 나오고, 그래프도 비슷하네..??"
    ]
   },
   {
@@ -170,15 +170,19 @@
    "metadata": {},
    "source": [
     "라고 저도 생각했는데.. 음성은 \"진동\"을 한다는 특성이 있습니다.  \n",
-    "이 때문에 비슷한 진동을 1과 -1 범위 내에서 \"대칭되게\" 움직인다는 특징이 있죠.  \n",
+    "진동이 1과 -1 범위 내에서 \"대칭되게\" 움직인다는 특징이 있죠.  \n",
     "\n",
-    "즉 이는, 역수를 취한다고 하더라도 강도를 그저 음수로 표현했을 뿐, 동일한 파워의 진동을 가지고 있다는 걸로 추정됩니다.\n",
-    "아래에서 증명을 진행해보겠습니다."
+    "즉 이는, -1일 곱한다고 하더라도 강도를 그저 음수로 표현했을 뿐,  \n",
+    "동일한 파워의 진동을 가지고 있게 됩니다.  \n",
+    "이에 들리는 소리 자체는 동일하게 들리는 게 아닐까 추측합니다.\n",
+    "\n",
+    "시각화 그래프는 언뜻 보면 비슷하게 생겼지만, 확대해서 보면 다릅니다.  \n",
+    "아래에서 보실 수 있습니다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -218,11 +222,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 사운드파일 불러오기, 역주파수 만들기 (위에서 했던 작업)\n",
+    "# 사운드파일 불러오기, 역위상 음원 만들기 (위에서 했던 작업)\n",
     "\n",
     "soundfile_path = './iloveyou_kakao.mp3'\n",
     "sound, sampling_rate = soundfile.read(soundfile_path)\n",
@@ -231,18 +235,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 원 사운드 파일과 역주파수 파일 더하기\n",
+    "# 원 사운드와 역위상 음원 더하기\n",
     "\n",
     "noise_canceling = sound + sound_reverse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +263,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -289,20 +293,20 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 들어보기 (역주파수)\n",
+    "# 들어보기 (역위상 음원)\n",
     "\n",
     "IPython.display.Audio(sound_reverse, rate = sampling_rate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +333,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -370,6 +374,19 @@
     "plt.plot(range(len(noise_canceling)), noise_canceling)\n",
     "plt.title('noise_canceling')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 음원 export\n",
+    "\n",
+    "soundfile.write('/Users/jongya/Desktop/sound_origin.wav', sound, sampling_rate)\n",
+    "soundfile.write('/Users/jongya/Desktop/sound_reverse.wav', sound_reverse, sampling_rate)\n",
+    "soundfile.write('/Users/jongya/Desktop/noise_canceling.wav', noise_canceling, sampling_rate)"
    ]
   },
   {
