--- a/20230502_noise_canceling/noise_canceling_research.ipynb
+++ b/20230502_noise_canceling/noise_canceling_research.ipynb
@@ -405,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "2.7.0"
+   "version": "2.7.undefined"
   },
   "orig_nbformat": 4
  },
